Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 03.01.2022 08:36:13</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 03.01.2022 09:13:28</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -102,7 +102,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Smazeny filet z jihoceskeho kapra {Velka Kaplice}, vanocni bramborovy salat se zeleninou a majonezou, citron {L} 139</li><li>Smazeny filet z cerstve tresky tmave, vanocni bramborovy salat se zeleninou a majonezou, citron {L} 169</li><li>Burrito s restovanymi krutimi gyros nudlickami, frijoles refritos, pekingskym zelim a rajcaty, zeleninovy bulgur, jogurtovy dip, salatek {L} 139</li><li>Smazeny teleci rizek, vanocni bramborovy salat se zeleninou a majonezou, citron {L} 169</li><li>Zapeceny cerny kuba se houbami smazenymi na cibulce, cesnekem a majorankou, nase kysane zeli s mrkvi a krenem {L} 139</li></ol>
+<ol><li>Peceny filet z lofotske makrely s citronem a petrzelkovym pestem se susenymi rajcaty, cockovy salat s paprikami a zeleninou 139</li><li>Peceny filet z cerstveho norskeho lososa s citronem a petrzelkovym pestem se susenymi rajcaty, cockovy salat s paprikami a zeleninou 169</li><li>Madras kari se selecim masem, kvetakem, rajcaty a zazvorem, jasminova ryze 139</li><li>Burger s trhanymi pecenymi prsicky divoke kachny {sriracha majoneza, pekingske zeli, rajce, cibulova marmelada}, pecene baby brambory, salatek {L} 169</li><li>Zapecene portobello plnene pecenou dyni s cibulkou a balkanskym syrem, pecene brambory, jogurtovy dip, salatek 139</li></ol>
 </td>
 </tr>
 </table>
