Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 04.01.2022 08:36:03</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 04.01.2022 09:13:26</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Úterý, 04. 01. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Polévka ze žluté čočky s kari</strong>
+<strong>Kmínová se zeleninou a vejcem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Vepřová roláda na pivu s rýží</strong>
+<strong>Candát na zeleninovém kuskusu s krémovou omáčkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							129,-
+							135,-
 						</span>
 </p>
 <p>
-<strong>Milánské fusilli s parmazánem</strong>
+<strong>Pečené kuřecí stehno na paprice s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							129,-
 						</span>
 </p>
 <p>
@@ -91,7 +91,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z lofotske makrely s citronem a petrzelkovym pestem se susenymi rajcaty, cockovy salat s paprikami a zeleninou 139</li><li>Peceny filet z cerstveho norskeho lososa s citronem a petrzelkovym pestem se susenymi rajcaty, cockovy salat s paprikami a zeleninou 169</li><li>Madras kari se selecim masem, kvetakem, rajcaty a zazvorem, jasminova ryze 139</li><li>Burger s trhanymi pecenymi prsicky divoke kachny {sriracha majoneza, pekingske zeli, rajce, cibulova marmelada}, pecene baby brambory, salatek {L} 169</li><li>Zapecene portobello plnene pecenou dyni s cibulkou a balkanskym syrem, pecene brambory, jogurtovy dip, salatek 139</li></ol>
+<ol><li>Peceny pstruh se salsou z cerstvych rajcat, okurek, nastavovana kase {stouchane brambory s krupkami a smazenou cibulkou}, salatek {L} 139</li><li>Peceny filet z cerstve prazmy se salsou z cerstvych rajcat a okurek, nastavovana kase {stouchane brambory s krupkami a smazenou cibulkou}, salatek {L] 175</li><li>Burrito s nudlickami krutich prsou, cervenymi fazolemi a cerstvymi rajcaty, pecene baby brambory, okurkove tzatziki, salatek {L} 139</li><li>Kralik po secuansku v palive omacce s cerstvym chilli, miso, zazvorem, zampiony a secuanskym peprem, jasminova ryze s pak coj, salatek 165</li><li>Imam bayildi – turecke zapecene lilky s rajcaty, restovanou cibulkou a balkanskym syrem, bulgur s cockou, salatek {L} 139 </li></ol>
 </td>
 </tr>
 </table>
