--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 04.01.2022 13:57:39</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 05.01.2022 06:11:49</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Úterý, 04. 01. 2022</h5>
+<h5>Středa, 05. 01. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Kmínová se zeleninou a vejcem</strong>
@@ -50,54 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Úterý 4.1.2022</div>
+<div class="nadpis">Středa 5.1.2022</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Kokosový puding s malinami  (bez lepku a laktózy) </div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Borůvkový cheesecake</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Brownie </div>
-<div class="cena">55 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Ořechová bábovka</div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Čočková polévka s klobásou samostatně    <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Čočková polévka s klobásou v menu <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">35 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Sekaná vepřová pečeně, bramborová kaše, okurkový relish <em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Krůtí prso, sýrová omáčka, cherry rajčata, rukola, pečené batáty <em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Fazolové chilli, kukuřice, basmati rýže, jalapenňos, bylinkový jogurt <em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -108,19 +63,22 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Gulášová</td><td class="menuPrice">39,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pórková s vejci</td><td class="menuPrice">39,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Hlavní jídla</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Smažené holanské řízky, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">119,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš se smetanou, kynuté houskové knedlíky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí roštěná na žampionech, dušená jasmínová rýže</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí játra s BBQ omáčkou, smažené bramborové plátky</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Steak z kuřecích prsou na grilu, brokolicové pyré s máslem a sýrem, sázené vejce na šunce</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight">180g</td><td class="menuName">Smažená vinná klobása, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na jemné omáčce z modrého sýra, restované špecle</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí gyros v pšeničné tortille s majonézovým dresinkem, ledovým salátem, feferonkou a čerstvou paprikou, smažené bramborové hranolky, tzatziki</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát promíchaný olivovým olejem, hermelín v těstíčku, vařené vejce, brusinkové žerve</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">1+1</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr><tr><td class="menuWeight">2+1</td><td class="menuName">Staropramen  EXTRA CHMELENÁ 12% - Dej si dva čepované ležáky a domů za věrnost dostaneš 0,5l plechovku, není množstevně omezeno, vypiješ " dvacet kousku "  a dostaneš 10 plechovek</td><td class="menuPrice">84,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Kapsa z vepřové kýty s nádivkou, vejci, šunkou, kapií a hráškem na roštu, mačkané brambory s cibulkou</td><td class="menuPrice">119,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a vejcem, kynuté houskové knedlíky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí stroganov se žampiony a kyselou okurkou, smažené bramborové hranolky, šlehačka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí soté se zeleninou, paprikou a chilli, dušená jasmínová rýže</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Sekaný masový biftek na grilu, grilovaná paprika s karotkou, zeleninový salát s ředkvičkami a rukolou, zakysaná smetana</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené žampióny, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny tagleatelle s bolonským ragú, strouhaný sýr</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné hříbkové omáčce, restované špecle</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Míchaný zeleninový salát promíchaný olivovým olejem, filírovaná vepřová panenka, vařené vejce, parmazán</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">2+1</td><td class="menuName">Staropramen  EXTRA CHMELENÁ 12% - Dej si dva čepované ležáky a domů za věrnost dostaneš 0,5l plechovku, není množstevně omezeno, vypiješ " dvacet kousku "  a dostaneš 10 plechovek</td><td class="menuPrice">84,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
+<h5 class="border_box_title">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -128,7 +86,7 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Cibulačka se sýrovým toastem 1a,3,7</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Pečená kuřecí roláda plněná masovou fáší s vařenými brambory a máslovou zeleninou 1a,3,7,9</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Tagliatelle Bolognese, masové ragú s kořenovou zeleninou, červeným vínem, drcenými rajčaty se sýrem Forte Classico a rukolovými listy 1a,3,7,9,12</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Vepřový steak se sázeným vejcem a anglickou slaninou s hranolky, tatarskou omáčkou a trhaným salátem 1a,3,7,10</td><td class="pricem">135 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Zelná s klobásou a brambory 1a,7,12</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Svíčková na smetaně, brusinky, naše houskové knedlíky 1a,3,7,9,10,12</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Kuřecí nudličky na červeném curry se zeleninou a kokosovým mlékem s jasmínovou rýží 6</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">300g</td><td class="title">Salát z černé čočky Beluga se šunkou od kosti, pečenými brambory Grenaille a medovo hořčičným dresinkem 10</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
