Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 05.01.2022 08:36:04</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 05.01.2022 09:13:18</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -94,7 +94,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny pstruh se salsou z cerstvych rajcat, okurek, nastavovana kase {stouchane brambory s krupkami a smazenou cibulkou}, salatek {L} 139</li><li>Peceny filet z cerstve prazmy se salsou z cerstvych rajcat a okurek, nastavovana kase {stouchane brambory s krupkami a smazenou cibulkou}, salatek {L] 175</li><li>Burrito s nudlickami krutich prsou, cervenymi fazolemi a cerstvymi rajcaty, pecene baby brambory, okurkove tzatziki, salatek {L} 139</li><li>Kralik po secuansku v palive omacce s cerstvym chilli, miso, zazvorem, zampiony a secuanskym peprem, jasminova ryze s pak coj, salatek 165</li><li>Imam bayildi – turecke zapecene lilky s rajcaty, restovanou cibulkou a balkanskym syrem, bulgur s cockou, salatek {L} 139 </li></ol>
+<ol><li>Burrito s kousky rybich filetu {hejk, halibut, makrela}, maslovymi fazolemi a pekingskym zelim, jogurtovy dip, pecene brambory, salatek {L} 139 </li><li>Peceny filet z cerstveho lososa a morana s citronem a tapenadou z cernych oliv, pohanka se smazenou cibulkou, salatek z cervene repy 169</li><li>Veprove sogajaki – japonske platky veprove kotlety na zazvoru se sojovou omackou, mirin a bylinkami, jasminova ryze, zeleninove cukemono 139</li><li>Medailonky z danci plece dusene na zelenem pepri, bramborove placky, salatek z cervene repy {L} 169</li><li>Smazena hliva, stouchane brambory s cibulkou, tatarska omacka, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
