--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 06.01.2022 08:36:18</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 06.01.2022 09:13:31</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Čtvrtek, 06. 01. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Květáková</strong>
+<strong>Tomatová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Selský Vepřový plátek s kroketami a tatarkou</strong>
+<strong>Smažené kuřecí paličky s vařeným bramborem a chilli dipem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
+							129,-
 						</span>
 </p>
 <p>
-<strong>Čočka s párkem, vejcem a okurkou</strong>
+<strong>Hovězí pečeně po Burgundsku s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							135,-
 						</span>
 </p>
 <p>
@@ -85,7 +85,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Burrito s kousky rybich filetu {hejk, halibut, makrela}, maslovymi fazolemi a pekingskym zelim, jogurtovy dip, pecene brambory, salatek {L} 139 </li><li>Peceny filet z cerstveho lososa a morana s citronem a tapenadou z cernych oliv, pohanka se smazenou cibulkou, salatek z cervene repy 169</li><li>Veprove sogajaki – japonske platky veprove kotlety na zazvoru se sojovou omackou, mirin a bylinkami, jasminova ryze, zeleninove cukemono 139</li><li>Medailonky z danci plece dusene na zelenem pepri, bramborove placky, salatek z cervene repy {L} 169</li><li>Smazena hliva, stouchane brambory s cibulkou, tatarska omacka, salatek {L} 139</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s grilovanym citronem a dresinkem z celozrnne horcice, bramborovy salat s cervenou repou, krenem, majonezou a creme fraiche 139</li><li>Smazeny filet z cerstveho halibuta, bramborovy salat s cervenou repou, krenem, majonezou a creme fraiche {L} 169</li><li>Medailonky z krutich prsou po jihoindicku v citronove omacce s kokosovym mlekem a zazvorem, jasminova ryze, salatek 139</li><li>Spagety s uzenym koroptvim prosciuttem, pak coj, susenymi rajcaty a petrzelkovym pestem {L} 169</li><li>Burrito s pikantnim fazolovym chilli s pecenymi paprikami, chipotle a rajcaty, jasminova ryze, jogurtovy dip, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
