Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 10.01.2022 08:10:47</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 10.01.2022 08:36:33</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -126,7 +126,7 @@ s cuketou, restovanou hlívou ústřičnou a omáčkou z portského vína
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z lofotske makrely s krenovym jogurtovym dipem, zeleninovy bulgur, salatek {L} 139</li><li>Peceny filet z cerstveho candata a ostrozubce s krenovym jogurtovym dipem, zeleninovy bulgur, salatek {L} 175</li><li>Seleci ribsy pecene na pomerancich se spetkou chilli, jasminova ryze, salatek 139</li><li>Bramborove spalicky s kousky zajice peceneho na cernem pive a korenove zelenine, nase kysane zeli s krenem a horcicnym seminkem {L} 169 </li><li>Indicke kvetakove kari s kokosovym mlekem, hraskem a sazenym vajickem, jasminova ryze 139</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s citronem a ancovickovym dresinkem, smazena zeleninova ryze, salatek 139</li><li>Smazena ryze s opekanou chobotnici, zeleninou a ancovickovym dresinkem, citron, salatek 175</li><li>Burrito s mexickym carnitas {pikantni trhane veprove} a goudou, pecene brambory, jogurtovy dip, salatek {L} 139</li><li>Pecene rolovane irske jehneci hrudi v bramborove loksi s pecenou podzimni zeleninou, salatek {L} 169</li><li>Marocka cizrnova tazine s pecenou maslovou dyni, rajcaty, korenim Ras el hanout a grilovanym syrem halloumi, zeleninovy bulgur {L} 139 </li></ol>
 </td>
 </tr>
 </table>
