Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 12.01.2022 08:36:27</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 12.01.2022 09:13:24</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Středa, 12. 01. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Čočková s párkem</strong>
+<strong>Asijská Zeleninová polévka</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Chilli con carne s rýží</strong>
+<strong>Vepřový plátek s barbecue omáčkou a kroketami</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
 						</span>
 </p>
 <p>
-<strong>Tilapie v pivním těstíčku s hranolkami a tatarkou</strong>
+<strong>Míchaný salát s pečenými kuřecími křidélky a bagetkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
+							129,-
 						</span>
 </p>
 <p>
@@ -129,7 +129,7 @@ s cuketou, restovanou hlívou ústřičnou a omáčkou z portského vína
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s dynovou salsou, cizrnovy hummus, salatek 139</li><li>Peceny cerstvy morsky vlk s dynovou salsou, cizrnovy hurmmus, salatek 169</li><li>Indonesky kruti sataj kebab s arasidovou omackou, korenena ryze s beluga cockou, salatek 139</li><li>Pecene danci hrudi s nadivkou s kachnimi jatry a portobello, bramborove spalicky, cervena repa s jablky na vine {L} 165</li><li>Smazeny kapustovy rizek s goudou, stouchane brambory se zelenou cibulkou, tatarska omacka {L} 139</li></ol>
+<ol><li>Filet z atlantickeho hejka zapeceny na recky zpusob s maslovymi fazolemi, rajcaty, bylinkami a balkanskym syrem, jasminova ryze, salatek 139</li><li>Spagety s cerstvymi sardinkami, pecenymi paprikami, kaparami brokolici a petrzelkou {L} 169</li><li>Kow mo daeng – thajske grilovane veprove ve sladke a vonave marinade se zelenou cibulkou a bylinkami, jasminova ryze, salatek 139 </li><li>Pikantni paprikas z danci a srnci plece s pecenymi paprikami a spetkou chilli, bramborove spalicky {L} 159</li><li>Italske dynove rizoto na bilem vine s ovci fetou, salatek 139</li></ol>
 </td>
 </tr>
 </table>
