Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 12.01.2022 09:13:24</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 12.01.2022 09:43:14</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -52,7 +52,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Středa 12.1.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Vanilkový věneček</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Mrkvový dort</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Red curry polévka s kuřecím masem, zelenina, rýžové nudle- samostatně  <em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Celer">9</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Red curry polévka s kuřecím masem, zelenina, rýžové nudle- v menu <em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Celer">9</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>250g Pečené kuřecí stehno na zázvoru a medu, vařené brambory s bylinkovým máslem, coleslaw <em title="Mléko">7</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Hovězí nudličky v arašídové omáčce s kokosovým mlékem, jasmínová rýže, čerstvá zelenina <em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Polenta zapékaná s grilovanou zeleninou a parmazánem, slunečnicové semínko, míchaný salát <em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>200g Chlazený kuskusový salát se zeleninou a parmazánem</div>
+<div class="cena">79 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -129,7 +169,7 @@ s cuketou, restovanou hlívou ústřičnou a omáčkou z portského vína
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Filet z atlantickeho hejka zapeceny na recky zpusob s maslovymi fazolemi, rajcaty, bylinkami a balkanskym syrem, jasminova ryze, salatek 139</li><li>Spagety s cerstvymi sardinkami, pecenymi paprikami, kaparami brokolici a petrzelkou {L} 169</li><li>Kow mo daeng – thajske grilovane veprove ve sladke a vonave marinade se zelenou cibulkou a bylinkami, jasminova ryze, salatek 139 </li><li>Pikantni paprikas z danci a srnci plece s pecenymi paprikami a spetkou chilli, bramborove spalicky {L} 159</li><li>Italske dynove rizoto na bilem vine s ovci fetou, salatek 139</li></ol>
+<ol><li>Filet z atlantickeho hejka zapeceny na recky zpusob s maslovymi fazolemi, rajcaty, bylinkami a balkanskym syrem, jasminova ryze, salatek 139</li><li>Spagety s cerstvymi sardinkami, pecenymi paprikami, kaparami brokolici a petrzelkou {L} 169</li><li>Kow mo daeng – thajske grilovane veprove ve sladke a vonave marinade se zelenou cibulkou a bylinkami, jasminova ryze, salatek 139 </li><li>Pikantni paprikas z danci a srnci plece s pecenymi paprikami a spetkou chilli, bramborove spalicky {L} 159</li><li>Italske dynove rizoto na bilem vine s creme fraiche a ovci fetou, salatek 139</li></ol>
 </td>
 </tr>
 </table>
