Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 13.01.2022 08:36:26</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 13.01.2022 09:14:47</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -52,7 +52,42 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 13.1.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s tvarohem, ostružinami/borůvkami a drobenkou</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Hovězí gulášová polévka- samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Hovězí gulášová polévka- s menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Uzené kachní prso, variace salátů, čočka beluga, hruškový dresing, rozpečená bageta <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Krůtí steak tandori, cizrna v tomatové omáčce, jogurt, koriandr <em title="Mléko">7</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Zeleninové karbanátky, bramborová kaše, pažitkový dip, salát z červené řepy <em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>Caesar wrap s kuřecím masem, vajíčkem a slaninou</div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -123,7 +158,7 @@ s cuketou, restovanou hlívou ústřičnou a omáčkou z portského vína
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Filet z atlantickeho hejka zapeceny na recky zpusob s maslovymi fazolemi, rajcaty, bylinkami a balkanskym syrem, jasminova ryze, salatek 139</li><li>Spagety s cerstvymi sardinkami, pecenymi paprikami, kaparami brokolici a petrzelkou {L} 169</li><li>Kow mo daeng – thajske grilovane veprove ve sladke a vonave marinade se zelenou cibulkou a bylinkami, jasminova ryze, salatek 139 </li><li>Pikantni paprikas z danci a srnci plece s pecenymi paprikami a spetkou chilli, bramborove spalicky {L} 159</li><li>Italske dynove rizoto na bilem vine s creme fraiche a ovci fetou, salatek 139</li></ol>
+<ol><li>Peceny filet z norskeho slede se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvymi bylinkami, zeleninou a klicky 139</li><li>Gravlax z divokeho lososa nerka se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvymi bylinkami, zeleninou a klicky 169</li><li>Malajsky hovezi rendang s kokosovym mlekem, vonavym korenim a tamarindem, jasminova ryze, salatek 139</li><li>Smazeny sekany teleci rizek s goudou, stouchane brambory se smazenou cibulkou, nase kysane zeli s mrkvi {L} 169</li><li>Arabsky cizrnovy hummus s olivovym olejem, sekane varene vajicko se zaatarem, arabske placky, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
